Fixed error with overlay on mobile devices with URL showbar

--- a/src/scss/components/_overlay.scss
+++ b/src/scss/components/_overlay.scss
@@ -5,9 +5,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    width: 100dvw;
     height: 100vh;
-    height: 100dvh;
 
     z-index: 19;
 
